syntax = "proto3";
option go_package = "gsf/protocol/cs/cs";

message echoToS {}

message echoToC {}